added extra fields to get lectures by course id
